--- a/public/xcomstyle.css
+++ b/public/xcomstyle.css
@@ -35,7 +35,7 @@
            
         }
 
-        @media screen and (max-width: 419px){
+        @media only screen and (max-width: 419px){
             .hero-image{
                 height:500px;
             }
